Fix the display of the news pill on mobile when no image
We have to not put the span when there is no image, and
we have to actually not display the arrow on mobile, both
so that there isn't space reserved for them throwing off
the display.

--- a/assets/css/components/Hero.css
+++ b/assets/css/components/Hero.css
@@ -102,7 +102,7 @@
 }
 
 .Hero__latestLink svg {
-  visibility: hidden;
+  display: none;
   fill: currentColor;
 }
 
@@ -120,7 +120,7 @@
 .Hero__latestPill {
   display: inline-block;
   text-transform: uppercase;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .Hero__latestPill img {
   width: 150px;
@@ -136,7 +136,7 @@
   }
 
   .Hero__latestLink svg {
-    visibility: visible;
+    display: inline-block;
   }
 
   .Hero__latestText {
